--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,7 +84,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/Contact">Contact</a>
+                <a class="nav-link" href="{{ site.baseurl }}/contact">Contact</a>
                 </li>
             
                 
