--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
     
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
+#Heading {
+	background-color: yellow;
+}
     
 </head>
     
