--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
     
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 #Heading {
+	height: 600px;
 	background-color: yellow;
 }
     
