--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@ ga('send', 'pageview');
     
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{layout}}">
-<body style="background-color:lightblue;">
+<body style="background-color:powderblue;">
     
 <!-- Begin Menu Navigation
 ================================================== -->
