--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,9 @@ ga('send', 'pageview');
 ================================================== -->
 <!-- Content
 ================================================== --> 
-    {{ content }}
+   
+<div class="main-content" id="Content">
+	 {{ content }}
 </div>
 
 {% if site.mailchimp-list %}
