--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,6 +104,18 @@ ga('send', 'pageview');
 ================================================== -->
 <!-- Content
 ================================================== --> 
+<div class="site-content">   
+
+<div class="container">
+
+<!-- Site Title
+================================================== -->
+<div class="mainheading" id="Heading">
+    <h1 class="sitetitle">{{ site.name }}</h1>
+    <p class="lead">
+         {{ site.description }}
+    </p>
+</div>
    
 <div class="main-content" id="Content">
 	 {{ content }}
