--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@ ga('send', 'pageview');
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/News">News</a>
+                <a class="nav-link" href="{{ site.baseurl }}/News.md">News</a>
                 </li>
                 
                 {% if page.url == "/about.html" %}
