--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ ga('send', 'pageview');
     
     <!-- Begin Logo -->
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-    <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+    <img src="KUNN 1.3.1 Border.png" alt="{{ site.name }}">
     </a>
     <!-- End Logo -->
   
