--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -14,6 +14,16 @@ License: https://www.wowthemes.net/freebies-license/
      color: #038252;
      text-decoration:none;
 }
+.main-content {
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.main-content {
+    background-image: url('../images/background.jpg');
+    min-width: 100%;
+}
  pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
