--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -19,6 +19,7 @@ License: https://www.wowthemes.net/freebies-license/
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .main-content {
     background-image: url('../images/background.jpg');
