--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,10 +109,12 @@ ga('send', 'pageview');
 	<!-- Site Title
 ================================================== -->
 <div class="mainheading" id="Heading">
+    <section class="sectionlight">
     <h1 class="sitetitle">{{ site.name }}</h1>
     <p class="lead">
          {{ site.description }}
     </p>
+    </section>
 </div>
 <!-- Content
 ================================================== --> 
