--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -36,14 +36,14 @@ License: https://www.wowthemes.net/freebies-license/
      box-shadow:0 2px 2px -2px rgba(0,0,0,.15);
      transition: top 0.2s ease-in-out;
 }
-.site-content {
+.container {
     position: relative;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-.site-content{
+.container{
     background-image: url('../images/background.jpg');
     min-width: 100%;
 }
