--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -50,7 +50,7 @@ License: https://www.wowthemes.net/freebies-license/
 .whitebox{
     width: 80%;
     height: 80%;
-    color: #fff;
+    background-color: white;
     opacity: 0.75;
 }
  .main-content {
