--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -51,7 +51,7 @@ License: https://www.wowthemes.net/freebies-license/
     width: 80%;
     height: 80%;
     background-color: white;
-    opacity: 0.75;
+    color: black;
 }
  .main-content {
     min-height:300px;
