--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -48,7 +48,7 @@ License: https://www.wowthemes.net/freebies-license/
     min-width: 100%;
 }
 .whitebox{
-    background: rgba(255,255,255,0.9);
+    background-color: #fff;
     color: black;
 }
  .main-content {
