--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,6 +122,7 @@ ga('send', 'pageview');
 <div class="main-content" id="Content">
      {{ content }}
 </div>
+<div class="parallax-window home-image-bg" data-parallax="scroll" data-bleed="30" data-idele="parallax_home_opacity" data-opacity="0.5" data-filter="contrast(100%) saturate(110%)" data-backgroundcolor="#000000" data-image-src="https://cdn-cms.f-static.com/uploads/1976137/2000_5c8151561960f.jpg" data-position="center center" data-background-position="center center" style="background-position:center center"></div>
 
 {% if site.mailchimp-list %}
 <!-- Bottom Alert Bar
