--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -33,6 +33,7 @@ License: https://www.wowthemes.net/freebies-license/
 }
  .mediumnavigation {
      background:rgba(255,255,255,.97);
+     background-color: #fff;
      box-shadow:0 2px 2px -2px rgba(0,0,0,.15);
      transition: top 0.2s ease-in-out;
 }
